--- a/frontend/ChessieGame/app/src/main/res/layout/fragment_difficulty_set.xml
+++ b/frontend/ChessieGame/app/src/main/res/layout/fragment_difficulty_set.xml
@@ -42,18 +42,20 @@
         app:backgroundTint="#E6FFECFB" />
 
     <TextView
-        android:id="@+id/textView7"
-        android:layout_width="wrap_content"
+        android:id="@+id/gameID"
+        android:layout_width="264dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_marginStart="179dp"
-        android:layout_marginLeft="179dp"
-        android:layout_marginEnd="174dp"
-        android:layout_marginRight="174dp"
-        android:text="TextView" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="76dp"
+        android:layout_marginLeft="76dp"
+        android:layout_marginTop="253dp"
+        android:layout_marginEnd="71dp"
+        android:layout_marginRight="71dp" />
 
     <TextView
         android:id="@+id/textView4"
@@ -93,4 +95,13 @@
         android:layout_marginRight="22dp"
         android:background="#00FFFFFF"
         android:src="@android:drawable/ic_menu_close_clear_cancel" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="319dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="164dp"
+        android:text="After chosing the difficulty, please input the gameID on switiches then press KEY0 (1 switch up, 0 switch down)" />
 </RelativeLayout>
