--- a/frontend/ChessieGame/app/src/main/res/layout/fragment_difficulty_set.xml
+++ b/frontend/ChessieGame/app/src/main/res/layout/fragment_difficulty_set.xml
@@ -43,19 +43,17 @@
 
     <TextView
         android:id="@+id/gameID"
-        android:layout_width="264dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
         android:layout_centerHorizontal="true"
         android:layout_marginStart="76dp"
         android:layout_marginLeft="76dp"
-        android:layout_marginTop="253dp"
+        android:layout_marginTop="262dp"
         android:layout_marginEnd="71dp"
-        android:layout_marginRight="71dp" />
+        android:layout_marginRight="71dp"
+        android:textColor="#FFFFFF"
+        android:textSize="18sp" />
 
     <TextView
         android:id="@+id/textView4"
@@ -98,10 +96,13 @@
 
     <TextView
         android:id="@+id/textView5"
-        android:layout_width="319dp"
-        android:layout_height="wrap_content"
+        android:layout_width="354dp"
+        android:layout_height="84dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="164dp"
-        android:text="After chosing the difficulty, please input the gameID on switiches then press KEY0 (1 switch up, 0 switch down)" />
+        android:layout_marginTop="165dp"
+        android:gravity="center"
+        android:text="After choosing the difficulty, please input the gameID on switches then press KEY0 (1 switch up, 0 switch down)"
+        android:textColor="#FFFFFF"
+        android:textSize="14sp" />
 </RelativeLayout>
