--- a/frontend/ChessieGame/app/src/main/res/layout/activity_resume_game_pop_up.xml
+++ b/frontend/ChessieGame/app/src/main/res/layout/activity_resume_game_pop_up.xml
@@ -7,13 +7,13 @@
 
     <TextView
         android:id="@+id/gameIDresume"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="158dp"
+        android:layout_height="91dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginStart="76dp"
         android:layout_marginLeft="76dp"
-        android:layout_marginTop="262dp"
+        android:layout_marginTop="487dp"
         android:layout_marginEnd="71dp"
         android:layout_marginRight="71dp"
         android:textColor="#FFFFFF"
