--- a/frontend/ChessieGame/app/src/main/res/layout/fragment_home_screen.xml
+++ b/frontend/ChessieGame/app/src/main/res/layout/fragment_home_screen.xml
@@ -57,12 +57,14 @@
             android:layout_height="293dp"
             android:layout_marginTop="19dp"
             android:layout_marginBottom="24dp"
-            android:src="@drawable/chessimage"
+            android:src="@drawable/chessscreen"
             app:layout_constraintBottom_toTopOf="@+id/resume_previous"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView3"
             app:layout_constraintVertical_bias="1.0" />
+
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
